home page modified

--- a/FrontEnd/frontpage.html
+++ b/FrontEnd/frontpage.html
@@ -14,17 +14,17 @@
         </div>
         <div class="row">
             <!--First User design starts here-->
-            <div class="profile-card">
-                <div class="profile-content">
+            <div class="profile-card">   
+                <div class="profile-content"> 
                     <div class="profile-image">
-                        <img src="./FrontEnd/images_insti/MIT.jpg" alt="mit">
+                        <img src="images/mit.svg" alt="mit"> 
                     </div>
                     <div class="desc">
-                        <h2>MIT USA</h2>
-                        <p>Lorem ipsum dolor sit amet adipisicing elit. </p>
+                        <h2>MIT U</h2>
+                        <p>Lorem ipsum dolor sit amet adipisicing elit. </p> 
                     </div>
                     <div class="btn-div">
-                        <button class="btn">Signin</button>
+                        <button class="btn">Sign in</button>
                     </div>
                 </div>
             </div>
@@ -33,14 +33,14 @@
              <div class="profile-card">
                 <div class="profile-content">
                     <div class="profile-image">
-                        <img src="" alt="harvard">
+                        <img src="images/harvard.svg" alt="harvard">
                     </div>
                     <div class="desc">
                         <h2>Harvard</h2>
                         <p>Lorem ipsum dolor sit amet adipisicing elit. </p>
                     </div>
                     <div class="btn-div">
-                        <button class="btn">Signin</button>
+                        <button class="btn">Sign in</button>
                     </div>
                 </div>
             </div>
@@ -49,14 +49,14 @@
              <div class="profile-card">
                 <div class="profile-content">
                     <div class="profile-image">
-                        <img src="" alt="stanford">
+                        <img src="images/stanford.svg" alt="stanford">
                     </div>
                     <div class="desc">
                         <h2>Stanford</h2>
                         <p>Lorem ipsum dolor sit amet adipisicing elit. </p>
                     </div>
                     <div class="btn-div">
-                        <button class="btn">Signin</button>
+                        <button class="btn">Sign in</button>
                     </div>
                 </div>
             </div>
@@ -65,14 +65,14 @@
              <div class="profile-card">
                 <div class="profile-content">
                     <div class="profile-image">
-                        <img src="" alt="Oxford">
+                        <img src="images/oxford.svg" alt="Oxford">
                     </div>
                     <div class="desc">
                         <h2>Oxford</h2>
                         <p>Lorem ipsum dolor sit amet adipisicing elit. </p>
                     </div>
                     <div class="btn-div">
-                        <button class="btn">Signin</button>
+                        <button class="btn">Sign in</button>
                     </div>
                 </div>
             </div>
@@ -80,4 +80,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> 
